--- a/WebContent/assets/css/creations/bacground.css
+++ b/WebContent/assets/css/creations/bacground.css
@@ -16,7 +16,6 @@ hr {
   height: 30px;
 }
 
-
 .main-aside {
   width: 15%;
   height: 100%;
@@ -94,7 +93,7 @@ hr {
   height: 360px;
   margin: 10px;
   padding: 15px;
-  border: 1px solid rgb(205, 205, 205);
+  /* border: 1px solid rgb(205, 205, 205); */
 }
 
 .likes ,
@@ -143,13 +142,18 @@ img {
   height: 70px;
 }
 
-.creaions-img > img {
+.creations-img {
+  /* border: 0.3px solid gray; */
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.creations-img > img {
   width: 450px;
   height: 230px;
   align-items: center;
 }
 
-.creaions-sub {
+.creations-sub {
   display: flex;
   justify-content: space-between;
   padding: 10px;
