--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -220,8 +220,8 @@ li.menu-list:nth-child(5) {
 
 .create-list {
   display: flex;
-  align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .create-card {
