--- a/WebContent/assets/css/creations/background-creations1-in.css
+++ b/WebContent/assets/css/creations/background-creations1-in.css
@@ -4,6 +4,18 @@
   resize: none;
 }
 
+#comment-input {
+  width: 640px;
+}
+.reply-date {
+ display: flex;
+    align-items: center;
+    justify-content: center;
+ 
+}
+.reply-member{
+	margin-right: 15px;
+}
 body {
   background-color: rgb(255, 255, 245);
 }
