--- a/WebContent/assets/css/creations/background-creations1.css
+++ b/WebContent/assets/css/creations/background-creations1.css
@@ -297,7 +297,12 @@ li.menu-list:nth-child(5) {
 .icon-box {
   margin: 5px 0;
 }
-
+#upup{
+	background-color: rgb(198, 133, 238);
+    color: black;
+    border-radius: 5px;
+    font-weight: bold;
+}
 .handpen-img,
 .display-img,
 .icon-img,
@@ -314,4 +319,9 @@ li.menu-list:nth-child(5) {
 #moniter {
   width: 100px;
   height: 100px;
+}
+.creations-btn {
+display: flex;
+    justify-content: flex-end;
+    margin-right: 450px;
 }
