--- a/WebContent/assets/css/qna/qna-reply-write.css
+++ b/WebContent/assets/css/qna/qna-reply-write.css
@@ -1,285 +1,224 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: Verdana, sans-serif;
-	box-sizing: border-box;
-	background-color: rgb(255, 255, 245);
-}
+  /*   margin: 10px;
+    padding: 10px 0; */
+    background-color: rgb(255, 255, 245);
+  }
+  
+  section>.big-box{
+    width: 65%;
+    height: 100%;
+    border-top:3px solid rgb(80, 123, 158);
+    margin: 20px 390px;
+    border-bottom: 3px solid rgb(80, 123, 158) ;
+    background-color: rgb(252, 252, 236);
+  }
 
-/* 헤더 스타일~ */
-* {
-	/* margin: 10px;
-  padding: 10px 0; */
-	background-color: rgb(255, 255, 245);
-}
-
-body>hr {
-	width: 60%;
-	margin-top: 20px;
-	margin-bottom: 30px;
-}
-
-main {
-	width: 95%;
-	display: block;
-	/* padding-left: 150px; */
-	/* display: flex;
-  justify-content: center; */
-}
-
-header {
-	width: 100%;
-	height: 100px;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-}
-
-.header-box {
-	display: flex;
-	justify-content: center;
-	height: 150px;
-	width: 1500px;
-}
-
-.main-header-box {
-	display: block;
-	align-items: center;
-	width: 40%;
-}
-
-.main-nav-box {
-	height: 50%;
-	width: 100%;
-}
-
-.logo>img {
-	width: 230px;
-	height: 100px;
-}
-
-.nav {
-	align-items: center;
-	text-align: center;
-	width: 100%;
-	height: 40%;
-	padding-top: 40px;
-}
-/* position 주기 */
-.drop-box {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	width: 100%;
-}
-
-.dropbtn1, .dropbtn2, .dropbtn3, .dropbtn4 {
-	color: black;
-	/* padding: 16px; */
-	font-size: 16px;
-	border: none;
-	cursor: pointer;
-	list-style: none;
-	width: 150px;
-}
-
-.dropdown1, .dropdown2, .dropdown3, .dropdown4 {
-	display: inline-block;
-	/* height: 150px; */
-	position: relative;
-}
-
-.dropdown-content1, .dropdown-content2, .dropdown-content3,
-	.dropdown-content4 {
-	display: none;
-	background-color: #f9f9f9;
-	max-width: 140px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	position: absolute;
-}
-
-.dropdown-content1>a, .dropdown-content2>a, .dropdown-content3>a,
-	.dropdown-content4>a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-
-.dropdown-content1>a:hover, .dropdown-content2>a:hover,
-	.dropdown-content3>a:hover, .dropdown-content4>a:hover {
-	background-color: #f1f1f1;
-}
-
-.dropdown1:hover .dropdown-content1, .dropdown2:hover .dropdown-content2,
-	.dropdown3:hover .dropdown-content3, .dropdown4:hover .dropdown-content4
-	{
-	display: block;
-}
-
-.dropdown1:hover .dropbtn1, .dropdown2:hover .dropbtn2, .dropdown3:hover .dropbtn3,
-	.dropdown4:hover .dropbtn4 {
-	background-color: ivory;
-}
-
-.btn-box {
-	width: 100px;
-	display: block;
-	justify-content: center;
-}
-
-.login-box {
-	height: 10%;
-}
-
-.login-btn {
-	padding: 2px;
-	height: 20px;
-	justify-content: center;
-	align-items: center;
-	background-color: rgb(198, 133, 238);
-	color: black;
-	border-radius: 5px;
-	text-decoration-line: none;
-}
-
-.category {
-	color: gray;
-	text-decoration-line: none;
-	cursor: pointer;
-}
-
-.list-content-back{
-	padding: 10px 20px;
-    border-radius: 5px;
-    border: none;
-    background-color: rgb(198, 133, 238);
-	color: black;
-}
-/* 중간섹션*/
-.btn {
-	margin: 10px;
-	padding: 10px;
-	border-radius: 5px;
-}
-
-li {
-	list-style-type: none;
-}
-
-.list-box {
-	margin-left: 600px;
-}
-
-.footee {
-	margin-left: 300px;
-}
-
-textarea {
-	resize: none;
-}
-
-#comment-input {
-	width: 640px;
-}
-/* 
-
- 
- 
- 
- 
- 
- 
- 라인~~~~
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- */
-/* #form-commentInfo {
-  width: 100%;
-}
-
-#comment-count {
-  margin-bottom: 10px;
-}
-
-#comment-input {
-  width: 50%;
-  height: 3.3em;
-}
-
-#submit {
-  background-color: purple;
-  width: 5.5em;
-  height: 3.3em;
-  font-size: 15px;
-  font-weight: bold;
-  color: aliceblue;
-}
-
-#voteUp,
-#voteDown {
-  width: 3.5em;
-  height: 1.9em;
-  background-color: aqua;
-}
-
-#comments {
-  margin-top: 10px;
-}
-
-.eachComment {
-  width: 50%;
-  margin: 10px;
-  padding: 0.5em;
-  border-bottom: 1px solid #c1bcba;
-}
-
-.eachComment .name {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-bottom: 0.3em;
+section>.gd{
   display: flex;
   justify-content: space-between;
 }
 
-.eachComment .inputValue {
-  font-size: 1.2em;
-  font-style: italic;
+  .gd>h1{
+   margin: 20px 400px;
+   padding: 10px 0;
+   margin-bottom: -20px;
+  }
+
+  .writer-sub{
+   display: flex;
+  
+   margin: 10px 450px;
+   padding: 10px 10px;
+   margin-bottom: -20px;
+  }
+  .writer-sub>.author {
+   margin:20px 0px ;
+   
+  }
+  
+  .writer-sub>.writer2{
+    font-weight: bold;
+     margin: 20px 0px;
+     border: none;
+    
+  }
+  
+  
+
+  .big-box>.small-box{
+    margin: 20px 40px;
+    background-color:  rgb(252, 252, 236);
+  }
+
+.small-box>.line{
+    margin-left: -38px;
+    width: 1200px;
+    border: 1px solid rgb(236, 234, 234);
 }
 
-.eachComment .time {
-  font-size: 0.7em;
-  color: #c1bcba;
-  font-style: oblique;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+.small-box>.text1{
+  background-color: rgb(252, 252, 236) ;
+  margin-top: 50px;
+}
+.small-box>.text1>p{
+  background-color: rgb(252, 252, 236) ;
+  margin: 20px 110px;
+  font-weight : bold;
 }
 
-.eachComment .voteDiv {
-  display: flex;
-  justify-content: flex-end;
+ .small-box>.title{
+    margin: 0 110px;
+    width: 900px;
+    height: 30px;
+    background-color: rgb(252, 252, 236);
+    border-color:rgb(80, 123, 158) ;
+    border-width: 1px;
+    border-radius: 5px;
+ }
+
+ .small-box>.word1{
+  background-color: rgb(252, 252, 236) ;
+  margin: 0 110px;
 }
 
-.eachComment .deleteComment {
-  background-color: red;
-  color: aliceblue;
-} */
+.small-box>.word1>p{
+  background-color: rgb(252, 252, 236) ;
+  margin-top: 0 110px;
+  font-weight : bold;
+}
+
+ .small-box>.word{
+    margin:0 110px;
+    width: 900px;
+    height: 500px;
+    background-color: rgb(252, 252, 236);
+    border-color: rgb(80, 123, 158) ;
+    border-width: 1px;
+    border-radius: 5px;
+ }
+
+
+.big-box>.form-group{
+    margin: 10px 140px;
+    background-color: rgb(252, 252, 236);
+}
+
+ .form-group>.file{
+    margin: 20px 25px;
+    background-color: rgb(252, 252, 236);
+ }
+
+ .big-box>.button{
+    width: 150px;
+    background-color:  rgb(252, 252, 236) ;
+    margin: 30px 1000px;
+ }
+
+ .button>button{
+    padding: 6px;
+    border-radius: 5.5%;
+    font-size: 17px;
+    /* border-color: rgb(162, 68, 162); */
+    border: none;
+    background-color: rgb(80, 123, 158);
+    border-width: 0.5px;
+    font-weight: bold;
+    cursor: pointer;
+ }
+ 
+ /* 이미지 업로드 스타일 */
+svg {
+   width: 1em;
+   height: 1em;
+   fill: rgb(255, 87, 87);
+}
+
+.image-upload-wrap {
+   border: 1px solid rgb(240, 240, 240);
+   background-color: white;
+   padding: 13px;
+   position: relative;
+}
+
+.upload-text {
+   display: flex;
+   justify-content: center;
+   margin: 4px;
+   font-size: 12px;
+   color: rgb(158, 158, 158);
+}
+
+.upload-text:first-child {
+   color: black;
+   font-weight: bold;
+}
+
+.upload-text:last-child {
+   color: rgb(80, 123, 158);
+   font-weight: bold;
+}
+
+.upload-icon {
+   margin-right: 5px;
+}
+
+input[type='file'] {
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   cursor: pointer;
+   opacity: 0;
+}
+
+.form-group>.file{
+	font-weight:bold;
+}
+
+.file-list {
+   list-style-type : none;
+   margin-top : 15px;
+   display : flex;
+}
+
+.file-list > li {
+   display:flex;
+   position : relative;
+   width : 145px;
+   height : 100px;
+   margin-right : 10px;
+   background-color: rgb(252, 252, 236);
+}
+
+.show-img-box{
+   width : 100%;
+   height : 100%;
+}
+
+.show-img-box > img{
+   width : 100%;
+   height : 100%;
+}
+
+.btn-box{
+}
+
+.btn1-box{
+   bottom : 0;
+   right : 0;
+}
+
+.img-cancel-btn{
+    background-color: #333333;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    width: 40px;
+    height: 25px;
+}
+
+.img-cancel-btn:hover{
+   background-color: rgb(255, 87, 87);
+   color: #fff;
+}
