--- a/WebContent/assets/css/ani.css
+++ b/WebContent/assets/css/ani.css
@@ -1,303 +1,182 @@
-* {
-  margin: 0px;
-  padding: 0px;
-}
-
-body {
+*{
   background-color: rgb(255, 255, 245);
 }
 
-a {
-  text-decoration: none;
+hr {
+  width: 85%;
+  color: rgb(217, 217, 217);
 }
 
-body > hr {
-  width: 60%;
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-
-main {
-  width: 95%;
-  display: block;
-  /* padding-left: 150px; */
-  /* display: flex;
-  justify-content: center; */
-}
-
-header {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.header-box {
-  display: flex;
-  justify-content: center;
-  height: 150px;
-  width: 1500px;
-}
-
-.main-header-box {
-  display: block;
-  align-items: center;
-  width: 40%;
-}
-
-.main-nav-box {
-  height: 50%;
-  width: 100%;
-}
-
-.logo > img {
-  width: 230px;
-  height: 100px;
-}
-
-.nav {
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  height: 40%;
-  padding-top: 40px;
-}
-/* position 주기 */
-.drop-box {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-}
-
-.dropbtn1,
-.dropbtn2,
-.dropbtn3,
-.dropbtn4 {
-  color: black;
-  /* padding: 16px; */
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  list-style: none;
-  width: 150px;
-}
-
-.dropdown1,
-.dropdown2,
-.dropdown3,
-.dropdown4 {
-  display: inline-block;
-  /* height: 150px; */
-  position: relative;
-}
-
-.dropdown-content1,
-.dropdown-content2,
-.dropdown-content3,
-.dropdown-content4 {
-  display: none;
-  background-color: #f9f9f9;
-  max-width: 140px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  position: absolute;
-}
-
-.dropdown-content1 > a,
-.dropdown-content2 > a,
-.dropdown-content3 > a,
-.dropdown-content4 > a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content1 > a:hover,
-.dropdown-content2 > a:hover,
-.dropdown-content3 > a:hover,
-.dropdown-content4 > a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown1:hover .dropdown-content1,
-.dropdown2:hover .dropdown-content2,
-.dropdown3:hover .dropdown-content3,
-.dropdown4:hover .dropdown-content4 {
-  display: block;
-}
-
-.dropdown1:hover .dropbtn1,
-.dropdown2:hover .dropbtn2,
-.dropdown3:hover .dropbtn3,
-.dropdown4:hover .dropbtn4 {
-  background-color: ivory;
-}
-
-.btn-box {
-  width: 100px;
-  display: block;
-  justify-content: center;
-}
-
-.login-box {
-  height: 10%;
-}
-
-.login-btn {
-  padding: 2px;
-  height: 20px;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(198, 133, 238);
-  color: black;
-  border-radius: 5px;
-  text-decoration-line: none;
-}
-
-.category {
-  color: gray;
-  text-decoration-line: none;
-  cursor: pointer;
-}
-
-/* section */
-
-.category-container {
-  border-bottom: 0.5px solid rgb(221, 220, 220);
-}
-
-.category-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-}
-
-.menu-list {
-  list-style: none;
-  margin: 10px 10px;
-  padding: 10px 50px;
-  cursor: pointer;
-}
-
-li.menu-list:nth-child(1) {
-  background-color: #f9838f;
-}
-
-li.menu-list:nth-child(2) {
-  background-color: rgb(243, 243, 180);
-}
-
-li.menu-list:nth-child(3) {
-  background-color: lightblue;
-}
-
-li.menu-list:nth-child(4) {
-  background-color: #fae100;
-}
-
-li.menu-list:nth-child(5) {
-  background-color: rgb(198, 133, 238);
-}
-
-.create-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.create-card {
-  border: 1px solid gray;
-  width: 300px;
-  height: 300px;
-  margin: 20px 30px;
-  padding: 20px;
-  box-shadow: 1px 1px 2px 8px gray;
-  cursor: pointer;
-}
-
-.menu-list-1,
-.menu-list-2,
-.menu-list-3,
-.menu-list-4,
-.menu-list-5 {
-  text-decoration: none;
-}
-
-.create-card-img {
-  width: 290px;
-  height: 200px;
-  display: block;
-  margin: 0 auto;
-}
-
-.like-icon {
-  width: 30px;
-  height: 30px;
-  border: 0;
-  outline: 0;
-}
-
-.like-icon-img {
-  width: 25px;
-  height: 25px;
-}
-
-.reply-icon-img {
-  width: 25px;
-  height: 25px;
-}
-
-.icon-box {
+.main {
   display: flex;
   justify-content: space-between;
-  padding: 0 7px;
 }
 
-.create-people-img {
+.main-box-bin {
+  height: 30px;
+}
+
+
+.main-aside {
+  width: 15%;
+  height: 100%;
+  display: flex;
+
+  align-items: center;
+  color: white;
+}
+
+.creations-main {
+  padding: 10px 10px;
+  margin: 0 30px;
+  display: block;
+  flex-wrap: wrap;
+  width: 80%;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.creations-main2 {
+  padding: 10px 10px;
+  margin: 0 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.creations {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 80%;
+}
+
+.creations-title {
+  width: 70%;
+  align-items: center;
+}
+
+.creations-btn {
+  padding-top: 20px;
+  height: 50px;
+}
+
+.creations-btn  > a {
+  padding: 10px 7px;
+  border-radius: 5px;
+  background-color: rgb(215, 215, 215);
+  align-items: end;
+  text-decoration: none;
+  color: black;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 800px;
+}
+
+.mypage-main {
+  width: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img {
+  width: 350px;
+  height: 480px;
+  margin: 10px;
+  padding: 15px;
+  /* border: 1px solid rgb(205, 205, 205); */
+}
+
+.likes ,
+.comment {
+  width: 20px;
+  height: 20px;
+}
+
+.mypage-name {
+  width: 70%;
+  height: 60%;
+}
+
+.editbtn > a {
+  width: 80px;
+  background-color: rgb(213, 213, 213);
+  text-decoration: none;
+  color: black;
+  border-radius: 5px;
+  padding: 2px 5px;
+}
+
+.click {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.name > a {
+  text-decoration: none;
+  color: grey;
+}
+
+.creations-main2 > section {
+  width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.creations-img {
+  /* border: 0.3px solid gray; */
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.creations-img > img {
+  width: 350px;
+  height: 350px;
+  align-items: center;
+}
+
+.creaions-sub {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.sub-author {
+  display: flex;
+  padding: 5px 5px;
+}
+
+.sub-author > img {
   width: 30px;
   height: 30px;
 }
 
-.create-title > h4 {
-  margin: 5px auto;
-  padding: 0 5px;
+.sub-author > a {
+  padding: 5px;
+  text-decoration: none;
+  color: black;
 }
 
-.create-people {
-  margin: 5px 0;
-  padding: 0 5px;
+.sub-title {
+  padding: 20px 0 10px 10px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.icon-box {
-  margin: 5px 0;
-}
-
-.handpen-img,
-.display-img,
-.icon-img,
-.kakaotheme-img,
-.ani-img {
-  width: 60px;
-  height: 60px;
-}
-
-.category-name {
-  background-color: #c685ee;
-  display: flex;
-  justify-content: center;
-  margin: 10px auto;
-}
-
-.category-name-img {
-  width: 100px;
-  height: 100px;
+.sub-title > a {
+  text-decoration: none;
+  color: black;
 }
