--- a/WebContent/assets/css/qna/qna-reply-read.css
+++ b/WebContent/assets/css/qna/qna-reply-read.css
@@ -58,7 +58,7 @@ h1 {
 }
 
 .list-btn,
-.modify-btn,
+.edit-btn,
 .delete-btn {
   color: black;
   background-color: rgb(198, 133, 238);
@@ -71,9 +71,9 @@ h1 {
 }
 
 .list-btn:hover,
-.modify-btn:hover,
+.edit-btn:hover,
 .delete-btn:hover {
-  background-color: rgb(255, 87, 87);
+  background-color: rgb(198, 133, 238);
   color: #fff;
 }
 
@@ -159,13 +159,13 @@ svg {
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
-  background-color: #333;
+  background-color: rgb(198, 133, 238);
   color: #fff;
   cursor: pointer;
 }
 
 .comment-form button:hover {
-  background-color: rgb(255, 87, 87);
+  background-color: rgb(198, 133, 238);
 }
 
 .form-group > label {
@@ -229,13 +229,13 @@ svg {
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
-  background-color: #333;
+  background-color:rgb(198, 133, 238);
   color: #fff;
   cursor: pointer;
 }
 
 .comment-btn-group button:hover {
-  background-color: rgb(255, 87, 87);
+  background-color: rgb(198, 133, 238);
 }
 
 .none {
@@ -290,4 +290,120 @@ textarea {
   height: 80px;
   justify-content: center;
   flex-direction: column;
+}
+
+
+/* 댓글 스타일 */
+.comment-wrap {
+   margin-top: 20px;
+}
+
+.comment-form {
+   margin : 50px 0 70px 0;
+}
+
+.comment-form textarea {
+   width: 100%;
+   height: 100px;
+   padding: 10px;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   resize: none;
+}
+
+.comment-form button {
+   margin-top: 10px;
+   padding: 5px 10px;
+   border: none;
+   border-radius: 5px;
+   background-color:rgb(198, 133, 238);
+   color: black;
+   cursor: pointer;
+}
+
+.comment-form button:hover {
+   background-color: rgb(198, 133, 238);
+}
+
+.form-group>label {
+   margin-right: 10px;
+   font-size: 12px;
+}
+
+#comment-list {
+   list-style: none;
+}
+
+.comment-item {
+   margin-bottom: 20px;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   padding: 10px;
+}
+
+.comment-writer {
+   font-weight: bold;
+}
+
+.comment-date {
+   margin-left: 10px;
+   font-size: 12px;
+   color: #999;
+}
+
+.comment-content {
+   margin-top: 5px;
+}
+
+.comment-list li {
+   border-bottom: 1px solid #e0e0e0;
+   margin-bottom: 20px;
+   padding-bottom: 20px;
+}
+
+.comment-info {
+   font-size: 14px;
+   color: #999;
+}
+
+.comment-info .writer {
+   margin-right: 10px;
+}
+
+.comment-content p {
+   font-size: 16px;
+   line-height: 1.5;
+   margin-top: 10px;
+}
+
+.comment-content-wrap{
+   display : flex;
+   justify-content: space-between;
+}
+
+.comment-btn-group button {
+   margin-top: 10px;
+   padding: 5px 10px;
+   border: none;
+   border-radius: 5px;
+   background-color: rgb(198, 133, 238);
+   color: black;
+   cursor: pointer;
+}
+
+.comment-btn-group button:hover{
+   background-color: rgb(198, 133, 238);
+}
+
+.none{
+   display : none;
+}
+
+.comment-list textarea {
+   width: 900px;
+   height: 40px;
+   padding: 10px;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   resize: none;
 }
