--- a/WebContent/assets/css/mypage/mypage-follow.css
+++ b/WebContent/assets/css/mypage/mypage-follow.css
@@ -45,6 +45,13 @@ section {
   align-items: center;
 }
 
+.mypage-main2 {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .img {
   width: 300px;
   height: 250px;
@@ -57,6 +64,12 @@ section {
 .comment {
   width: 20px;
   height: 20px;
+}
+
+.mypage-box {
+  display: block;
+  width: 70%;
+  text-align: left;
 }
 
 .mypage-name {
@@ -167,4 +180,8 @@ img {
 
 .creations-msg {
   padding: 10px 0;
+}
+
+.none {
+	display : none;
 }
