--- a/WebContent/assets/css/mypage/mypage-like.css
+++ b/WebContent/assets/css/mypage/mypage-like.css
@@ -19,6 +19,16 @@ section {
   align-items: center;
 }
 
+.mypage-main2 > section {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
 .main-aside {
   width: 15%;
   height: 100%;
@@ -45,11 +55,15 @@ section {
 }
 
 .img {
-  width: 300px;
+/*   width: 300px;
   height: 360px;
   margin: 10px;
   padding: 15px;
-  border: 1px solid rgb(205, 205, 205);
+  border: 1px solid rgb(205, 205, 205); */
+   width: 300px;
+  height: 450px;
+  margin: 10px;
+  padding: 15px;
 }
 
 .likes ,
@@ -111,15 +125,16 @@ img {
   height: 70px;
 }
 
-.creaions-img > img {
+.creations-img > img {
   width: 300px;
   height: 230px;
   align-items: center;
 }
 
-.creaions-sub {
+.creations-sub {
   display: flex;
   justify-content: space-between;
+  padding: 10px;
 }
 
 .mypage-main > .mypage-box {
@@ -148,10 +163,10 @@ img {
   flex-wrap: wrap;
 }
 
-img {
+/* img {
   width: 70px;
   height: 70px;
-}
+} */
 
 .creations-img > img {
   width: 300px;
@@ -167,3 +182,59 @@ img {
   padding: 10px 0;
 }
 
+.creations-like {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creations-like > img{
+  width: 20px;
+  height: 20px;
+}
+
+.creations-comment {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creations-comment > img{
+  width: 22px;
+  height: 22px;
+}
+
+.sub-author {
+  display: flex;
+  padding: 5px 5px;
+}
+
+.sub-author > img {
+  width: 50px;
+  height: 50px;
+}
+
+.sub-author > a {
+  padding: 5px;
+  text-decoration: none;
+  color: black;
+}
+
+.creation-like ,
+.creation-comment {
+	display: flex;
+    align-items: center;
+}
+
+.sub-title {
+  padding: 20px 0 10px 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.sub-title > a {
+  text-decoration: none;
+  color: black;
+}
+
+.creations-img {
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
