디자인 수정중(회원가입 파일 수정)

--- a/WebContent/assets/css/header/header.css
+++ b/WebContent/assets/css/header/header.css
@@ -162,6 +162,11 @@ header{
   background-color: ivory
 }
 
+.dropbtn3 > a {
+	color: black;
+	text-decoration: none;
+}
+
 .btn-box {
 	width: 15%;
     display: block;
