--- a/WebContent/assets/css/community/communityList.css
+++ b/WebContent/assets/css/community/communityList.css
@@ -5,13 +5,7 @@
 
 }
 
-body > hr {
-  width: 100%;
-  margin-top: 20px;
-  margin-bottom: 30px;
- 
-  
-}
+
 
 main {
   width: 95%;
@@ -207,12 +201,13 @@ section{
 }
 
 section>.big-box{
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   height: 1000px;
   margin: 310px;
-  margin-top: 10px;
-  /* border: 1px solid rgb(48, 2, 33); */
- 
-  border-radius: 0.5%;
+  margin-top: 30px;
+  border: 1px solid #ebeef1;
+  
+  background-color: white;
 }
 
 .big-box>.menu{
@@ -222,6 +217,7 @@ section>.big-box{
   margin-top: 15px;
   height: 55px;
   margin-bottom: 10px;
+   background-color: white;
 }
 
 .menu>h1{
@@ -231,28 +227,30 @@ section>.big-box{
   font-size: 18px;
   /* background-color: rgb(238, 231, 231); */
   margin-left: 10px;
+   background-color: white;
 }
 
 .big-box>.small-box{
   margin: 0 18px;
   margin-top: 10px;
- 
+  
   width: 1350px;
   /* height: 700px; */
-  background-color: rgb(245, 245, 240);
-  border-top: 9px solid #6c9cc2;
-  border-bottom: 9px solid #6c9cc2;
+  background-color: white;
+  border-top: 1px solid rgb(223, 220, 220);
+/*   border-bottom: 9px solid #6c9cc2; */
 }
 
 .small-box>.table{
   display: flex;
   /* border: 1px solid rgb(226, 223, 223); */
+   background-color: white;
 }
 
 .table>.name{
   width: 160px;
   height: 114.5px;
-  
+   background-color: white;
 }
 
 .name>h1{
@@ -260,6 +258,7 @@ section>.big-box{
   font-size: 15px;
   padding: 35px 10px;
   margin-left: 47px;
+   background-color: white;
 }
 
 .comment>h1{
@@ -267,18 +266,37 @@ section>.big-box{
   margin: 47px 100px;
   font-size: 15px;
   margin-right: 22px;
+   background-color: white;
 }
 
 .cnt>h1{
   width: 85px;
   margin: 47px 60px;
   font-size: 15px;
+   background-color: white;
+}
+
+.comment{
+	 background-color: white;
+}
+
+.cnt{
+	 background-color: white;
 }
 
 .date>h1{
   width: 85px;
   margin: 47px 170px;
   font-size: 15px;
+   background-color: white;
+}
+
+.title{
+	 background-color: white;
+}
+
+.date{
+	 background-color: white;
 }
 
 .title>h1{
@@ -286,6 +304,7 @@ section>.big-box{
   margin: 47px 170px;
   font-size: 15px;
   margin-right: 20px;
+   background-color: white;
 }
 
 
@@ -296,12 +315,14 @@ section>.big-box{
   align-items: center;
   margin-top: -170px;
   margin-right : 80px;
+   background-color: white;
 }
 
 .pagination > ul {
   display: flex;
   list-style: none;
   /* background-color: rgb(238, 231, 231); */
+   background-color: white;
 }
 
 .pagination a {
@@ -313,6 +334,7 @@ section>.big-box{
   border-radius: 5px;
   border: 1px solid #333;
   transition: background-color 0.3s ease, color 0.3s ease;
+   background-color: white;
 }
 
 .pagination a:hover {
