--- a/WebContent/assets/css/aniview.css
+++ b/WebContent/assets/css/aniview.css
@@ -1,194 +1,257 @@
 * {
-  margin: 0px;
-  padding: 0px;
-}
-
-a {
-  text-decoration: none;
-}
-
-body {
   background-color: rgb(255, 255, 245);
+  margin: 0;
+  padding: 0;
 }
 
-body > hr {
-  width: 60%;
-  margin-top: 20px;
-  margin-bottom: 30px;
+hr {
+  width: 70%;
+  color: rgb(217, 217, 217);
 }
 
 main {
-  width: 95%;
-  display: block;
-  /* padding-left: 150px; */
-  /* display: flex;
-  justify-content: center; */
+  padding-left: 50px;
 }
 
-header {
-  width: 100%;
-  height: 100px;
+.main {
+  display: flex;
+  justify-content: space-between;
+  width: 95%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.background-box-bin {
+  height: 150%;
+  width: 300px;
+}
+
+.background-creations-main {
+  width: 60%;
+  border: 1px solid gray;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding: 10px;
 }
 
-.header-box {
+.main-aside {
+  width: 15%;
+  height: 100%;
   display: flex;
-  justify-content: center;
-  height: 150px;
-  width: 1500px;
-}
-
-.main-header-box {
-  display: block;
+  background-color: rgb(255, 255, 245);
   align-items: center;
-  width: 40%;
+  color: white;
 }
 
-.main-nav-box {
-  height: 50%;
-  width: 100%;
-}
-
-.logo > img {
-  width: 230px;
-  height: 100px;
-}
-
-.nav {
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  height: 40%;
-  padding-top: 40px;
-}
-/* position 주기 */
-.drop-box {
+.creations-info {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
+  flex-direction: row;
 }
 
-.dropbtn1,
-.dropbtn2,
-.dropbtn3,
-.dropbtn4 {
-  color: black;
-  /* padding: 16px; */
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  list-style: none;
-  width: 150px;
-}
-
-.dropdown1,
-.dropdown2,
-.dropdown3,
-.dropdown4 {
-  display: inline-block;
-  /* height: 150px; */
-  position: relative;
-}
-
-.dropdown-content1,
-.dropdown-content2,
-.dropdown-content3,
-.dropdown-content4 {
-  display: none;
-  background-color: #f9f9f9;
-  max-width: 140px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  position: absolute;
-}
-
-.dropdown-content1 > a,
-.dropdown-content2 > a,
-.dropdown-content3 > a,
-.dropdown-content4 > a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content1 > a:hover,
-.dropdown-content2 > a:hover,
-.dropdown-content3 > a:hover,
-.dropdown-content4 > a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown1:hover .dropdown-content1,
-.dropdown2:hover .dropdown-content2,
-.dropdown3:hover .dropdown-content3,
-.dropdown4:hover .dropdown-content4 {
-  display: block;
-}
-
-.dropdown1:hover .dropbtn1,
-.dropdown2:hover .dropbtn2,
-.dropdown3:hover .dropbtn3,
-.dropdown4:hover .dropbtn4 {
-  background-color: ivory;
-}
-
-.btn-box {
-  width: 100px;
-  display: block;
-  justify-content: center;
-}
-
-.login-box {
-  height: 10%;
-}
-
-.login-btn {
-  padding: 2px;
-  height: 20px;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(198, 133, 238);
-  color: black;
-  border-radius: 5px;
-  text-decoration-line: none;
-}
-
-/* section */
-
-.ani-container {
-  display: flex;
-  justify-content: center;
-}
-
-.ani-box {
-  width: 800px;
-  height: 590px;
-  border: 1px solid black;
-  overflow: hidden;
-  position: relative;
-}
-
-fieldset {
-  border: 0;
-}
-
-.create-people {
-  display: flex;
-  width: 80%;
-  height: 90px;
-  margin-left: 10px;
-}
-
-.create-people > img {
+.creations-img > img {
   width: 80px;
   height: 80px;
 }
 
-.create-people > a {
-  margin-top: 30px;
+.creations-author {
+  width: 70%;
+}
+
+.follow-btn {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.follow-btn > a {
+  padding: 5px 7px;
+  background-color: rgb(220, 220, 220);
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+}
+
+.creations-main {
+  display: block;
+  justify-content: center;
+}
+
+.creations-main-content {
+  /* padding: 0 50px; */
+
+  text-align: center;
+}
+
+.creations-main-content > img {
+  padding: 15px 0;
+  width: 700px;
+  height: 350px;
+}
+
+.creations-comment-content {
+  padding: 15px 0;
+  /* padding-left: 30px; */
+}
+
+.click-main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.click {
+  display: flex;
+  /* justify-content: center; */
+  text-align: left;
+  padding-left: 20px;
+}
+
+.click-btn {
+  display: flex;
+  padding-right: 10px;
+}
+
+.click-btn a {
+  text-decoration: none;
+  color: gray;
+  padding: 0 5px;
+}
+
+.creations-like {
+  padding: 0 10px;
+  font-size: 15px;
+}
+
+.creations-like > img {
+  width: 15px;
+  height: 15px;
+}
+
+.creations-comment {
+  padding: 0 10px;
+  font-size: 15px;
+}
+
+.creations-comment > img {
+  width: 17px;
+  height: 17px;
+}
+
+.comment {
+  width: 65%;
+  padding: 20px 0;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment-input {
+  display: flex;
+  width: 90%;
+  padding-left: 50px;
+  padding-bottom: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.comment-text {
+  width: 90%;
+}
+
+.comment textarea {
+  width: 92%;
+  height: 70px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: none;
+}
+
+.comment-ok-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment-ok-btn > button {
+  width: 58px;
+  height: 30px;
+}
+
+.comment-main {
+  display: flex;
+  padding: 20px 10px 20px 30px;
+}
+
+.comment-border {
+  border: 1px solid gray;
+  width: 95%;
+  border-radius: 7px;
+}
+
+.comment-box {
+  display: flex;
+  width: 80%;
+}
+
+.comment-member {
+  width: 100%;
+}
+
+.comment-writeday {
+  width: 20%;
+  text-align: end;
+}
+
+.comment-btn {
+  display: flex;
+  padding: 10px;
+  width: 20%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.none {
+  display: none;
+}
+
+.comment-btn > button {
+  margin: 0 5px;
+}
+
+.comment-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.comment-img {
+  width: 45px;
+  height: 45px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+
+.comment-img-box {
+  width: 8%;
+}
+
+/* 만화 슬라이드 css */
+.creations-main {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.creations-main-content {
+  width: 700px;
+  height: 350px;
+  border: 1px solid black;
+  overflow: hidden;
+  position: relative;
 }
 
 .ani-box-slide {
@@ -198,21 +261,15 @@ fieldset {
 }
 
 .ani-view {
-  width: 800px;
-  height: 500px;
+  width: 700px;
+  height: 350px;
 }
 
 li {
   list-style: none;
 }
 
-.prev,
-.next {
-  font-size: 50px;
-  position: absolute;
-  top: 280px;
-  cursor: pointer;
-}
+/* 만화 슬라이드 클릭버튼 */
 
 .prev {
   left: 0;
@@ -224,57 +281,9 @@ li {
 
 .prev,
 .next {
+  font-size: 50px;
+  position: absolute;
+  top: 140px;
+  cursor: pointer;
   color: black;
-}
-
-.icon-box {
-  display: flex;
-  /* justify-content: space-between; */
-  margin: 10px 70px;
-}
-
-.like-icon {
-  margin: 8px 772px 0 0;
-}
-
-a > img {
-  width: 30px;
-  height: 30px;
-}
-
-a {
-  text-decoration: none;
-}
-
-.like-icon-img {
-  width: 25px;
-  height: 25px;
-  margin: 0 110px;
-}
-
-.reply-icon-img {
-  width: 25px;
-  height: 25px;
-  margin: 0 -90px;
-}
-
-.reply-container {
-  border: 1px solid gray;
-}
-
-.reply-box {
-  display: flex;
-  /* justify-content: space-between; */
-  margin: 10px 175px;
-}
-
-.reply-box > label {
-  margin: 0 25px 0 5px;
-}
-
-textarea {
-  resize: none;
-  width: 600px;
-  height: 100px;
-  margin: 0 55px 0 0;
 }
