--- a/WebContent/assets/css/creations/creations.css
+++ b/WebContent/assets/css/creations/creations.css
@@ -48,9 +48,17 @@ main {
   flex-direction: row
 }
 
-.creations-img > img {
+.creations-img {
   width: 80px;
   height: 80px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+
+.creations-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .creations-author {
@@ -101,7 +109,7 @@ main {
   display: flex;
   /* justify-content: center; */
   text-align: left;
-  padding-left: 20px;
+  padding-left: 10px;
 } 
 
 .click-btn {
@@ -290,3 +298,13 @@ a > img {
 	display : none;
 }
 
+.commnet-btn-ok {
+  background-color: lightblue;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.commnet-btn-ok:hover {
+  background-color: rgb(153, 192, 205);
+}
