--- a/WebContent/assets/css/member/findPw.css
+++ b/WebContent/assets/css/member/findPw.css
@@ -194,7 +194,7 @@ margin-right: 10px;
 .tabs-nav li {
   list-style: none;
   float: left;
-  width: 50%;
+  width: 100%;
   border-top: 3px solid #666;
 }
 .tabs-nav li:first-child a {
@@ -204,11 +204,13 @@ margin-right: 10px;
 .tabs-nav li:last-child a {
 
 }
+#id {
+   background: #eee;
+   border: 1px solid #cecfd5;
+   display: block;
+}
  a {
-  background: #eee;
-  border: 1px solid #cecfd5;
   color: #eee;
-  display: block;
   font-weight: 600;
   padding: 10px 0;
   text-align: center;
@@ -296,7 +298,7 @@ color: #fff;
 .tabs-nav2 li {
   list-style: none;
   float: left;
-  width: 50%;
+  width: 100%;
   border-top: 3px solid #666;
 }
 .tabs-nav2 li:first-child a {
@@ -331,4 +333,3 @@ color: #fff;
   position: relative;
   top: -1px;
 }
-
