--- a/WebContent/assets/css/mypage/mypage-creations.css
+++ b/WebContent/assets/css/mypage/mypage-creations.css
@@ -37,9 +37,17 @@ section {
   align-items: center;
 }
 
-.mypage-img > img {
+.mypage-img {
   width: 80px;
   height: 80px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+
+.mypage-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .mypage-box {
@@ -67,11 +75,6 @@ section {
   height: 20px;
 }
 
-
-section {
-  width: 100%;
-}
-
 .click{
   display: flex;
   justify-content: space-around;
@@ -96,7 +99,7 @@ section {
 
 .img {
   width: 300px;
-  height: 450px;
+  height: 400px;
   margin: 10px;
   padding: 15px;
 }
@@ -116,12 +119,20 @@ section {
   padding: 5px 5px;
 }
 
-.sub-author > img {
-  width: 50px;
-  height: 50px;
+.sub-author-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 70%;
+  overflow: hidden;
 }
 
-.sub-author > a {
+.sub-author  img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.sub-author-name  a {
   padding: 5px;
   text-decoration: none;
   color: black;
@@ -168,6 +179,10 @@ section {
 .creations-comment > img{
   width: 22px;
   height: 22px;
+}
+
+.count {
+	margin : 0 5px;
 }
 
 .creations-main {
