--- a/WebContent/assets/css/mypage/mypage-like.css
+++ b/WebContent/assets/css/mypage/mypage-like.css
@@ -19,24 +19,6 @@ section {
   align-items: center;
 }
 
-.mypage-main2 > section {
-  width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-
-.main-aside {
-  width: 15%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  color: white;
-}
-
 .main-container {
   display: flex;
   flex-direction: column;
@@ -54,26 +36,25 @@ section {
   align-items: center;
 }
 
-.img {
-/*   width: 300px;
-  height: 360px;
-  margin: 10px;
-  padding: 15px;
-  border: 1px solid rgb(205, 205, 205); */
-   width: 300px;
-  height: 450px;
-  margin: 10px;
-  padding: 15px;
+.mypage-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 70%;
+  overflow: hidden;
 }
 
-.likes ,
-.comment {
-  width: 20px;
-  height: 20px;
+.mypage-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.mypage-box {
+  display: block;
+  width: 70%;
 }
 
 .mypage-name {
-  width: 70%;
   height: 60%;
 }
 
@@ -84,6 +65,12 @@ section {
   color: black;
   border-radius: 5px;
   padding: 2px 5px;
+}
+
+.likes ,
+.comment {
+  width: 20px;
+  height: 20px;
 }
 
 .click {
@@ -98,17 +85,138 @@ section {
   color: grey;
 }
 
+.mypage-main2 > section {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.img {
+   width: 300px;
+  height: 400px;
+  margin: 10px;
+  padding: 15px;
+}
+
+.creations-img {
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.creations-img > img {
+  width: 300px;
+  height: 230px;
+  align-items: center;
+}
+
+.sub-author {
+  display: flex;
+  padding: 5px 5px;
+}
+
+.sub-author-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+
+.sub-author  img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.sub-author-name  a {
+  padding: 5px;
+  text-decoration: none;
+  color: black;
+}
+
+.sub-title {
+  padding: 20px 0 10px 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.sub-title > a {
+  text-decoration: none;
+  color: black;
+}
+
+.creations-sub {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.creation-like ,
+.creation-comment {
+	display: flex;
+    align-items: center;
+}
+
+.creation-like {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creation-like > img{
+  width: 20px;
+  height: 20px;
+}
+
+.creation-comment {
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+.creation-comment > img{
+  width: 22px;
+  height: 22px;
+}
+
+.count {
+	margin : 0 5px;
+}
 
 .creations-main {
-  padding: 10px 10px;
-  /* margin-left: 60px; */
-  margin: 20px 30px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 90%;
-  align-items: center;
-  justify-content: center;
+    padding: 10px 10px;
+    /* margin-left: 60px; */
+    margin: 0 30px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    align-items: center;
+    justify-content: center;
+    color: rgb(193, 193, 193);
+    text-align: center;
+}
 
+.creations-default {
+  padding: 10px 0;
+}
+
+.creations-msg {
+  padding: 10px 0;
+}
+
+/* 
+.mypage-name {
+  width: 70%;
+  height: 60%;
+}
+
+.editbtn > a {
+  width: 80px;
+  background-color: rgb(213, 213, 213);
+  text-decoration: none;
+  color: black;
+  border-radius: 5px;
+  padding: 2px 5px;
 }
 
 .creations-main > section {
@@ -125,17 +233,8 @@ img {
   height: 70px;
 }
 
-.creations-img > img {
-  width: 300px;
-  height: 230px;
-  align-items: center;
-}
 
-.creations-sub {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-}
+
 
 .mypage-main > .mypage-box {
   width: 65%;
@@ -143,7 +242,7 @@ img {
 
 .creations-main {
   padding: 10px 10px;
-  /* margin-left: 60px; */
+  margin-left: 60px;
   margin: 0 30px;
   display: flex;
   flex-wrap: wrap;
@@ -163,78 +262,20 @@ img {
   flex-wrap: wrap;
 }
 
-/* img {
-  width: 70px;
-  height: 70px;
-} */
-
 .creations-img > img {
   width: 300px;
   height: 230px;
   align-items: center;
 }
 
-.creations-default {
-  padding: 10px 0;
-}
+ */
 
-.creations-msg {
-  padding: 10px 0;
-}
 
-.creations-like {
-  padding: 0 10px;
-  font-size: 20px;
-}
 
-.creations-like > img{
-  width: 20px;
-  height: 20px;
-}
 
-.creations-comment {
-  padding: 0 10px;
-  font-size: 20px;
-}
 
-.creations-comment > img{
-  width: 22px;
-  height: 22px;
-}
 
-.sub-author {
-  display: flex;
-  padding: 5px 5px;
-}
 
-.sub-author > img {
-  width: 50px;
-  height: 50px;
-}
 
-.sub-author > a {
-  padding: 5px;
-  text-decoration: none;
-  color: black;
-}
 
-.creation-like ,
-.creation-comment {
-	display: flex;
-    align-items: center;
-}
 
-.sub-title {
-  padding: 20px 0 10px 10px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.sub-title > a {
-  text-decoration: none;
-  color: black;
-}
-
-.creations-img {
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
